# 0-VN-Agent-System

./: .env.example  CLAUDE.md  Makefile  backtest.py  filter_universe.py  filtered_universe.txt  pyproject.toml  requirements.txt  run_backtest_pipeline.ps1  run_pivot.ps1  run_weekly.bat
agents/: smart_money_dashboard.md
config/: thresholds.yaml  universe_186.txt  watchlist.txt  watchlist_80.txt
data/: combined_regime_log_2012_now.csv  fa_minervini.csv  fundamentals_raw.csv  regime_log_2012_now.csv  regime_log_2019_2020.csv  universe_hose.txt
decision_log/: 2026-02-27.json  2026-02-28.json
docs/: AGENT_WINDOW_SETUP.md  ARCHITECTURE_LAYERS.md  BACKTEST_WORKFLOW.md  BOOK_TEST_LADDER.md  COUNCIL_OPERATING_SYSTEM.md  ENGINEER_CHECKLIST.md  EXIT_DIAGNOSIS.md  EXPERIMENT_SPACE_GIL.yaml  FIRST_RUN_TEST.md  GIL_BOOK_CONDITIONS.md  GIL_BRAIN_AUDIT_AND_OPTIMIZE.md  GIL_BRAIN_WORKFLOW.md  INGESTION_README.md  M4_SIGNAL_DESCRIPTION_FOR_AFL.md  META_LAYER_SPEC.md  META_PERF_DASHBOARD.md  MINERVINI_BACKTEST_LAYMAN_SUMMARY.md  OPEN_RISK_DASHBOARD.md  OPERATING_MANUAL.md  PILOT_C2_M0_APPROVED.md  PP_GIL_V4_STRUCTURAL_UPGRADE.md  PP_TWEAKS_RESEARCH.md  PROGRESS_DARVAS_LIVERMORE.md  PROMPT_LIBRARY.md  QUICKSTART.md  RESEARCH_DESIGN_DARVAS_LIVERMORE.md  RESEARCH_MACHINE_INTAKE_CONTRACT.md  RESEARCH_NOTE_TIMEFRAME.md  RESEARCH_STATE.md  SESSION_PROMPT_TEMPLATES.md  SESSION_START_NOTE.md  SMART_MONEY_DASHBOARD.md  SMART_MONEY_DATA_CONTRACT.md  TOKEN_OPTIMIZATION.md  TRADE_REVIEW_LAYER.md  UNIVERSE_SPEC_VN.md  commands.md  future_phases.md  ops_for_claude.md  runbook.md
(+2886 files in other folders)
